fix(navi): add scroll on mobile

--- a/public/_assets/scss/layouts/_navi.scss
+++ b/public/_assets/scss/layouts/_navi.scss
@@ -53,6 +53,8 @@
         min-width: 10rem;
         width: 35%;
 
+        overflow: auto;
+
         &__list {
             list-style: none;
             gap: var(--spacing-025);
